# netneurotools

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  dev_environment.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  feature-request.yml  feature_request.md
.github/workflows/: docker-release.yml  docs.yml  tests-basic.yml  tests-datasets-fetcher.yml  tests-plotting-pyvista.yml  tests.yml
docs/: Makefile  api.rst  comparison.rst  conf.py  index.rst  installation.rst  requirements.txt
docs/_static/: theme_overrides.css
docs/_templates/: function.rst
examples/: plot_assortativity.py  plot_connectivity_modes.py  plot_consensus_clustering.py  plot_coupling.py  plot_mirchi_2018.py  plot_perm_pvals.py  plot_spin_test.py  wip_plot_spin.py
netneuro_matlab/: communicability_wei.m  fcn_randz.m
netneurotools/: __init__.py  _version.py  algorithms.py  civet.py  cluster.py  colors.py  datasets.py  freesurfer.py  info.py  metrics.py  modularity.py  networks.py  plotting.py  stats.py  surface.py  utils.py
netneurotools/data/: cammoun.pckl  osf.json
netneurotools/data/Conte69_Atlas/: Conte69.L.very_inflated.32k_fs_LR.surf.gii  Conte69.R.very_inflated.32k_fs_LR.surf.gii
netneurotools/datasets/: __init__.py  _mirchi2018.py  cammoun.py  datasets.json  datasets.py  datasets_utils.py  fetch_atlas.py  fetch_project.py  fetch_template.py  fetchers.py  generators.py  mirchi.py  netneurotools.bib  references.json  transforms.py  utils.py
netneurotools/datasets/tests/: conftest.py  test_datasets_utils.py  test_fetch.py
netneurotools/experimental/: __init__.py
netneurotools/interface/: __init__.py  cifti.py  freesurfer.py  gifti.py  interface_utils.py  surf_parc.py  transforms.py
netneurotools/interface/tests/: test_freesurfer.py  test_transforms.py
netneurotools/metrics/: __init__.py  bct.py  communication.py  control.py  metrics_utils.py  spreading.py  statistical.py
netneurotools/metrics/tests/: test_bct.py  test_communication.py  test_control.py  test_spreading.py  test_statistical.py
netneurotools/modularity/: __init__.py  modules.py
netneurotools/modularity/tests/: test_modules.py
netneurotools/networks/: __init__.py  consensus.py  generative.py  networks_utils.py  randomize.py
netneurotools/networks/tests/: test_consensus.py  test_generative.py  test_networks_utils.py  test_randomize.py
netneurotools/plotting/: __init__.py  color_utils.py  mpl_plotters.py  pysurfer_plotters.py  pyvista_plotters.py
netneurotools/plotting/tests/: test_color_utils.py  test_colorutils.py  test_mpl.py  test_pysurfer.py  test_pyvista.py
netneurotools/spatial/: __init__.py  gaussian_random_field.py  spatial_stats.py
netneurotools/spatial/tests/: test_grf.py  test_spatialstats.py
netneurotools/stats/: __init__.py  correlation.py  permutation_test.py  regression.py  stats_utils.py
netneurotools/stats/tests/: test_correlation.py  test_permutation.py  test_regression.py
netneurotools/tests/: __init__.py  test_algorithms.py  test_civet.py  test_cluster.py  test_datasets.py  test_freesurfer.py  test_metrics.py  test_modularity.py  test_plotting.py  test_stats.py  test_utils.py  utils.py
netneurotools_matlab/: communicability_bin.m  communicability_wei.m  fcn_communicability.m  randz.m  zrand.m
resources/: generate_atl-cammoun2012_surface.py
tools/: install_dependencies.sh  install_package.sh  run_checks.sh
