[build-system]
requires = ["setuptools >= 38.3.0", "wheel", "versioneer-518"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["E", "F", "W", "D", "NPY"]
ignore = [
    "B905", # zip() without an explicit strict= parameter
    # "W605", # Invalid escape sequence: latex
    "NPY002", # Replace legacy `np.random` call with `np.random.Generator`
]
exclude = [
    "./netneurotools/_version.py",
    "./docs/conf.py",
    "setup.py"

]
line-length = 88

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"./netneurotools/tests/*.py" = ["D103"]
"./examples/*.py" = ["E402", "D"]
"*/__init__.py" = ["D104", "F401"]