[coverage:run]
omit = netneurotools/_version.py

[flake8]
doctests = True
exclude = *build/
ignore = W503, E402
max-line-length = 79

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[metadata]
description-file = README.rst

[versioneer]
VCS = git
style = pep440
versionfile_source = netneurotools/_version.py
versionfile_build = netneurotools/_version.py
tag_prefix =
parentdir_prefix =
