[metadata]
name = netneurotools
url = https://github.com/netneurolab/netneurotools
download_url = https://github.com/netneurolab/netneurotools
author = netneurotools developers
author_email = rossmarkello+coding@gmail.com
maintainer = Network Neuroscience Lab
maintainer_email = rossmarkello+coding@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
license = BSD-3
description = Commonly used tools in the Network Neuroscience Lab
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = OS Independent
provides =
    netneurotools

[options]
python_requires = >=3.6
install_requires =
    bctpy
    matplotlib
    nibabel
    nilearn
    numpy >=1.16
    scikit-learn
    scipy >=1.4.0
zip_safe = False
packages = find:

[options.extras_require]
doc =
    sphinx >=2.0
    sphinx_gallery
    sphinx_rtd_theme
plotting =
    mayavi
    pysurfer
numba =
    numba
style =
    flake8
test =
    coverage
    pytest >=3.6
    pytest-cov
all =
    %(doc)s
    %(plotting)s
    %(numba)s
    %(style)s
    %(test)s

[options.package_data]
netneurotools =
    data/*

[bdist_wheel]
universal=1

[coverage:run]
omit =
    netneurotools/_version.py

[flake8]
doctests = True
exclude =
    *build/
    *sphinx*
    */__init__.py
    _version.py
ignore = W503, E402
max-line-length = 88

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[versioneer]
VCS = git
style = pep440
versionfile_source = netneurotools/_version.py
versionfile_build = netneurotools/_version.py
tag_prefix =
parentdir_prefix =
